--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,6 +3,11 @@ name: Build and Push Docker Image
 on:
   push:
     branches: ["main"]
+    
+    paths-ignore:
+      - "README.md"
+      - "**/*.md"
+      
   workflow_dispatch:
 
 jobs:
