Update paths-ignore in docker-publish workflow

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,8 +5,9 @@ on:
     branches: ["main"]
     
     paths-ignore:
-      - "README.md"
       - "**/*.md"
+      - "public/**"
+      - ".github/**"
       
   workflow_dispatch:
 
